[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/misc/campfire.png" type="Texture" id=1]
[ext_resource path="res://scripts/items/Campfire.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/FFFFORWA.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/misc/campfire2.png" type="Texture" id=4]
[ext_resource path="res://assets/misc/campfire3.png" type="Texture" id=5]
[ext_resource path="res://assets/misc/campfire1.png" type="Texture" id=6]
[ext_resource path="res://assets/misc/light_circle.png" type="Texture" id=7]
[ext_resource path="res://assets/particles/smoke_particle.png" type="Texture" id=8]
[ext_resource path="res://assets/misc/campfire_unlit.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/UI/textbox.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.99412, 8.06929 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.4237, 9.57402 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 10 )

[node name="Campfire" type="AnimatedSprite"]
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "off"
script = ExtResource( 2 )

[node name="Label" type="RichTextLabel" parent="."]
margin_left = -20.4983
margin_top = -24.2287
margin_right = 163.501
margin_bottom = 30.7713
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/bold_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[b]Rest [/b] [img=40]res://assets/UI/icon_empty.png[/img]"
text = "Rest  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keybind" type="Label" parent="."]
anchor_left = -3.732
anchor_right = -3.732
margin_left = 69.4195
margin_top = -24.4243
margin_right = 76.4195
margin_bottom = -8.42427
rect_scale = Vector2( 0.75, 0.75 )
custom_colors/font_color = Color( 0.192157, 0.372549, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "E"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="." groups=["Campfire"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.00587682, 0.214286 )
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0, -1.28571 )
shape = SubResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( -1.95817, -1.00177 )
texture = ExtResource( 7 )
energy = 0.5

[node name="SmokeParticles" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( 0, -7.5 )
amount = 4
lifetime = 2.5
randomness = 0.6
texture = ExtResource( 8 )
direction = Vector2( 1, -1 )
spread = 0.0
gravity = Vector2( 0, -20 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -120.0
margin_right = 426.0
margin_bottom = 327.0
texture = ExtResource( 11 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="RichTextLabel" parent="CanvasLayer/Control/NinePatchRect"]
margin_left = 32.0
margin_top = 7.0
margin_right = 824.0
margin_bottom = 55.0
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "========== [color=#fc4903]Skill Customization[/color] =========="
text = "========== Skill Customization =========="
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_Area2D2_area_exited"]
